--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -1,6 +1,7 @@
 <html lang="en">
 <head>
     <title>Hello world</title>
+    <?= $this->jsLocalStorage();?>
 </head>
 <body>
 <?= $this -> content ?>
