upgrade to athena packages

--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -1,6 +1,7 @@
 <html lang="en">
 <head>
     <title>Hello world</title>
+    <?= $this -> addIeElements() . PHP_EOL ?>
     <?= $this -> headMeta() . PHP_EOL ?>
     <?= $this -> headLink() . PHP_EOL ?>
     <?= $this -> headScript() . PHP_EOL; ?>
