--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -1,3 +1,8 @@
+<?php $designConfig = $this -> designConfig(); ?>
+<?php if ($designConfig -> get('meta.xml_doctype_header.enabled')): ?>
+    <?= $this -> xmlDeclaration() ?>
+<?php endif; ?>
+<?= $this -> doctype($designConfig -> html -> doctype) . PHP_EOL ?>
 <html lang="en">
 <head>
     <title>Hello world</title>
