--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -1,4 +1,5 @@
 <?php $designConfig = $this -> designConfig(); ?>
+<?php $designExtraConfig = $designConfig -> layout -> extra; ?>
 <?php if ($designConfig -> meta -> xml_doctype_header -> enabled): ?>
     <?= $this -> xmlDeclaration() . PHP_EOL ?>
 <?php endif; ?>
@@ -16,6 +17,12 @@
 <nav class="navbar navbar-expand-md navbar-dark mb-4" role="navigation">
     <div class="container">
         <div class="navbar-header">
+        </div>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <?= $this -> navigation($designExtraConfig -> nav_factory_id) -> menu()
+                -> setMinDepth($designExtraConfig -> nav_min_depth)
+                -> setMaxDepth($designExtraConfig -> nav_max_depth)
+                -> setPartial($designExtraConfig -> menu_partial_resource); ?>
         </div>
     </div>
 </nav>
