upgrade to athena packages

--- a/view/application/partials/menu.phtml
+++ b/view/application/partials/menu.phtml
@@ -31,6 +31,6 @@
         <?php endif; ?>
     <?php endforeach; ?>
     <?php if ($this -> designConfig('layout.extra.include_language_nav_dropdown')): ?>
-        <?= $this -> languageDropdown() . PHP_EOL; ?>
+        <?= $this -> languageDropDown() . PHP_EOL; ?>
     <?php endif; ?>
 </ul>
