--- a/view/application/index/error.phtml
+++ b/view/application/index/error.phtml
@@ -8,7 +8,9 @@ use Laminas\Mvc\Application;
 
 ?>
     <h1>A 404 error occurred</h1>
+<?php if (!empty($this -> message)): ?>
     <h2><?= $this -> message ?></h2>
+<?php endif; ?>
 
 <?php if (!empty($this -> reason)) :
     switch ($this -> reason) {
@@ -49,7 +51,7 @@ use Laminas\Mvc\Application;
     </dl>
 <?php endif ?>
 
-<?php if (!empty($this -> display_exceptions)) : ?>
+<?php if ($this -> display_exceptions) : ?>
     <?php if (isset($this -> exception) && $this -> exception instanceof \Throwable) : ?>
         <hr/>
 
