app view helper

--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -25,7 +25,7 @@
         let appController = '<?= $this -> app() -> controller();?>';
         let appAction = '<?= $this -> app() -> action();?>';
         let appRoute = '<?= $this -> app() -> route();?>';
-        let serverProtocol = '<?= $this -> app() -> protocol();?>';
+        let scheme = '<?= $this -> app() -> scheme();?>';
     </script>
 </head>
 <body id="<?= $this -> htmlId('body'); ?>">
